infra/monitoring/argocd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: argocd
  annotations:
    #    cert-manager.io/issuer: monitoring-issuer
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-abcd1234, subnet-efgh5678
    alb.ingress.kubernetes.io/security-groups: sg-abcd1234
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    #    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: <certificate-arn>
    alb.ingress.kubernetes.io/group.name: admin-alb # alb 하나에 통합하고 싶을때 그룹 설정
    # external-dns.alpha.kubernetes.io/hostname: argoserver.argocd.gachicoding.shop
    alb.ingress.kubernetes.io/backend-protocol: HTTPS


spec:
  ingressClassName: alb
  rules:
    - host: argocd.recipetips.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server   #ALB 대상을 내 웹서비스로
                port:
                  number: 80
